# to-do-frontend

./: .gitignore  db.sqlite3  pyproject.toml
todo_backend/: settings.py  urls.py
